--- a/src/App.scss
+++ b/src/App.scss
@@ -3,8 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Ubuntu:wght@500&display=swap');
 
 #root {
-  font-family: 'Pacifico', cursive;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: $font-1;
+  font-family: $font-2;
 }
 
 body {
