set up user page and home page and made it more re-usable

--- a/src/components.scss
+++ b/src/components.scss
@@ -1,3 +1,4 @@
 @forward "./topNav/topNav.scss";
 @forward "./topNav/topNavSettingsColumn.scss";
 @forward "./users/usersIndex.scss";
+@forward "./homePage/homePage.scss"
