--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,4 @@
+@forward "./App.scss";
 @forward "./topNav/topNav.scss";
 @forward "./topNav/topNavSettingsColumn.scss";
 @forward "./users/usersIndex.scss";
