--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,4 @@
-@use "./components.scss";
 @use "./assets/index.scss" as *;
-@import url("https://fonts.googleapis.com/css2?family=Pacifico&family=Ubuntu:wght@500&display=swap");
 
 #root {
 	font-family: $font-1;
@@ -15,17 +13,11 @@ body {
 }
 
 .app-body {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+	@include flex-col-center
 }
 
 .sign-in-button-container {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
+	@include flex-row-center;
 	position: fixed;
 	bottom: 0;
 	left: 50%;
