--- a/src/topNav/topNavSettingsColumn.scss
+++ b/src/topNav/topNavSettingsColumn.scss
@@ -7,7 +7,7 @@
 	top: 90px;
 	left: 50%;
 	transform: translate(-50%, 0);
-	height: 80vh;
+	height: 88%;
 	width: 97vw;
 	max-width: none;
 	background-color: $color-3;
@@ -45,11 +45,11 @@
 			}
 		}
 	}
-  p {
-    &:hover {
-      cursor: pointer;
-      color: $color-4;
-      font-weight: bold;
-    }
-  }
+	p {
+		&:hover {
+			cursor: pointer;
+			color: $color-4;
+			font-weight: bold;
+		}
+	}
 }
