--- a/src/App.scss
+++ b/src/App.scss
@@ -26,17 +26,18 @@ body {
 }
 
 .button {
-	margin: 1rem;
-	padding: 0.5rem;
+	margin: 0.5rem;
+	padding: 0.25rem;
 	height: 50px;
-	width: 5rem;
+	width: 8rem;
 	border: none;
 	border-radius: 5px;
 	background-color: $color-3;
 	color: $color-5;
+	font-weight: bolder;
 	cursor: pointer;
 	&:hover {
-		background-color: $color-2;
-		color: $color-4;
+		background-color: $color-5;
+		color: $color-1;
 	}
 }
