settings up sign-in buttons

--- a/src/main.scss
+++ b/src/main.scss
@@ -2,4 +2,5 @@
 @forward "./topNav/topNav.scss";
 @forward "./topNav/topNavSettingsColumn.scss";
 @forward "./users/usersIndex.scss";
-@forward "./homePage/homePage.scss"
+@forward "./homePage/homePage.scss";
+@forward "./registerAndSignIn/signInUp.scss";
