--- a/src/registerAndSignIn/signInUp.scss
+++ b/src/registerAndSignIn/signInUp.scss
@@ -5,7 +5,7 @@
 	@include flex-col-center;
 	gap: 1rem;
 	margin-bottom: 1rem;
-	.label-text-group {
+	.text-input-group {
 		@include flex-col-center;
     gap: 0.5rem;
 		.input-label-class {
