set up bones and logic for sign up form

--- a/src/registerAndSignIn/signInUp.scss
+++ b/src/registerAndSignIn/signInUp.scss
@@ -1,6 +1,6 @@
 @use "../assets/index.scss" as *;
 
-.sign-in-form {
+.sign-in-up-form {
   margin-top: 4rem;
 	@include flex-col-center;
 	gap: 1rem;
