--- a/src/main.scss
+++ b/src/main.scss
@@ -4,3 +4,42 @@
 @forward "./users/usersIndex.scss";
 @forward "./homePage/homePage.scss";
 @forward "./registerAndSignIn/signInUp.scss";
+
+@use "./assets/index.scss" as *;
+
+#root {
+	font-family: $font-1;
+	font-family: $font-2;
+}
+
+body {
+	margin: 0 auto;
+	text-align: center;
+	background-color: $color-1;
+	color: $color-5;
+}
+
+.react-router-Link {
+	&:visited {
+		color: $color-5;
+		text-decoration: none;
+	}
+}
+
+.button {
+	margin: 0.5rem;
+	padding: 0.25rem;
+	height: 50px;
+	width: 8rem;
+	border: none;
+	border-radius: 5px;
+	background-color: $color-3;
+	color: $color-5;
+	font-weight: bolder;
+	cursor: pointer;
+	&:hover {
+		background-color: $color-5;
+		color: $color-1;
+	}
+}
+
