--- a/src/topNav/topNav.scss
+++ b/src/topNav/topNav.scss
@@ -17,8 +17,7 @@
 		display: flex;
 		flex-direction: row;
 		padding-right: 1rem;
-		.nav-icon-gear,
-		.nav-icon-house {
+		.nav-icon {
 			margin-left: 1rem;
 			font-size: 2rem;
 			&:hover {
@@ -28,15 +27,9 @@
 	}
 }
 
-.nav-icon-gear {
+.nav-icon {
 	transition: transform 0.5s ease-in-out;
 	&.rotated {
 		transform: rotate(-135deg);
-	}
-}
-
-.nav-link {
-	&:visited {
-		color: $color-5;
 	}
 }
