fixed background gradient issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,8 @@
 @use "./assets/index.scss" as *;
 
 .app-body {
-	@include flex-col-center
+	@include flex-col-center;
+	color: $color-5;
 }
 
 .sign-in-up-container {
