--- a/src/assets/_colors.scss
+++ b/src/assets/_colors.scss
@@ -1,5 +1,7 @@
 $color-1: #0B132B;
 $color-2: #1C2541;
 $color-3: #3A506B;
-$color-4: #5BC0BE;
+$color-4: #dcfbfb;
 $color-5: #FFF;
+
+$Background-gradient: linear-gradient(to bottom right, #0B132B, #dcfbfb);
