--- a/src/topNav/topNav.scss
+++ b/src/topNav/topNav.scss
@@ -1,7 +1,7 @@
 @use "../assets/index.scss" as *;
 
 .top-nav-row {
-	background: $color-3;
+	background: $nav-gradient;
 	color: $color-5;
 	display: flex;
 	flex-direction: row;
