LOTS of styling changes, moved the sign in and up links to the nav, added style to the home screen

--- a/src/assets/_colors.scss
+++ b/src/assets/_colors.scss
@@ -4,6 +4,10 @@ $color-3: #3a506b;
 $color-4: #dcfbfb;
 $color-5: #fff;
 
+$complementary-color-1: #d27416;
+$complementary-color-2: #004338;
+$complementary-color-3: #3e024b;
+
 $Background-gradient: linear-gradient(
 	to bottom right,
 	#040a13,
