--- a/src/homePage/homePage.scss
+++ b/src/homePage/homePage.scss
@@ -1,13 +1,31 @@
 @use "../assets/index.scss" as *;
 
 .home-page-container {
-	background: $Background-gradient
+	background: $Background-gradient;
 }
 
 .home-page-list {
+	margin: 0 auto;
 	@include flex-col-center;
-	margin-top: 2rem;
+	margin-top: 5rem;
+	max-width: 99vw;
 	h2 {
-		width: 70%;
+		max-width: 99%;
+		height: auto;
+		border: 1px solid $color-5;
+		border-radius: 0.5rem;
+		padding: 1rem;
+		margin: 1rem;
+		background-color: $complementary-color-3
+	}
+	h2:last-child {
+		background-color: $complementary-color-2;
+	}
+}
+
+.sign-up-bottom-link {
+	text-decoration: none;
+	&:visited {
+		color: $color-5;
 	}
 }
