--- a/src/homePage/homePage.scss
+++ b/src/homePage/homePage.scss
@@ -8,18 +8,21 @@
 	margin: 0 auto;
 	@include flex-col-center;
 	margin-top: 5rem;
-	max-width: 99vw;
+	max-width: 100vw;
+
 	h2 {
-		max-width: 99%;
+		// max-width: 100%;
 		height: auto;
-		border: 1px solid $color-5;
 		border-radius: 0.5rem;
 		padding: 1rem;
-		margin: 1rem;
-		background-color: $complementary-color-3
+		margin: 0.4rem;
 	}
 	h2:last-child {
-		background-color: $complementary-color-2;
+		border: 1px solid $color-5;
+		&:hover {
+			cursor: pointer;
+			background-color: $complementary-color-3;
+		}
 	}
 }
 
