added structure for locations, room, item.  Started location form and index

--- a/src/main.scss
+++ b/src/main.scss
@@ -4,6 +4,7 @@
 @forward "./users/usersIndex.scss";
 @forward "./homePage/homePage.scss";
 @forward "./registerAndSignIn/signInUp.scss";
+@forward "./Inventory/inventory.scss";
 
 @use "./assets/index.scss" as *;
 
