updated meta information

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,9 @@ body {
 
 a {
   text-decoration: none;
+  color: inherit;
 }
+
 ul {
   list-style: none;
   padding: 0;
@@ -15,5 +17,7 @@ ul {
 }
 
 .active {
-  color: orange
+  color: orange;
+  font-weight: bold;
+  font-size: large;
 }
