--- a/src/App.scss
+++ b/src/App.scss
@@ -21,3 +21,18 @@ ul {
   font-weight: bold;
   font-size: large;
 }
+
+.sign-in-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.GoogleOAuth {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
