added some styling

--- a/src/App.scss
+++ b/src/App.scss
@@ -36,3 +36,27 @@ ul {
   justify-content: center;
   align-items: center;
 }
+
+input {
+  width: 200px;
+  height: 40px;
+  border: 1px solid orange;
+  border-radius: 0.5rem;
+  background-color: black;
+  color: white;
+  padding: 0 0.5rem;
+  font-size: 1rem;
+  text-align: center;
+  
+}
+
+button {
+  width: 100px;
+  height: 40px;
+  background-color: orange;
+  border-radius: 0.5rem;
+  
+  
+  
+  
+}
