oauth styong updates

--- a/src/App.scss
+++ b/src/App.scss
@@ -52,7 +52,7 @@ input {
 button {
 	width: 100px;
 	height: 40px;
-	background-color: orange;
+	background-color: rgb(255, 165, 0);
 	border-radius: 0.5rem;
 }
 
