--- a/src/App.scss
+++ b/src/App.scss
@@ -60,10 +60,12 @@ button {
   padding-bottom: 0.8rem;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
+  gap: 30px;
+  margin: 0 auto;
+  width: 90vw;
   border-bottom: 1px solid orange;
-  border-radius: 0.5rem;
   .nav-link {
     padding: 0.25rem;
   }
