extracted top nav links away from app.tsx

--- a/src/App.scss
+++ b/src/App.scss
@@ -56,7 +56,7 @@ button {
 	border-radius: 0.5rem;
 }
 
-.nav-link-lists {
+.top-nav-link-list {
   padding-bottom: 0.8rem;
   display: flex;
   flex-direction: row;
