added subscription levels on home page with links

--- a/src/App.scss
+++ b/src/App.scss
@@ -84,7 +84,7 @@ input {
 		padding: 1rem;
 		width: 350px;
 		max-width: 95vw;
-		height: auto;
+		height: 350px;
 		border: 2px solid orange;
 		display: flex;
 		flex-direction: column;
