--- a/src/App.scss
+++ b/src/App.scss
@@ -30,6 +30,27 @@ ul {
 	gap: 0.5rem;
 }
 
+.subscription-container {
+	margin-bottom: 1rem;
+	.checkbox-container {
+		margin: 0 auto;
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-items: center;
+		gap: 1.2rem;
+		.checkbox-and-label {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+		}
+		.checkbox {
+			width: 2rem;
+		}
+	}
+}
+
 .GoogleOAuth {
 	display: flex;
 	flex-direction: column;
@@ -58,23 +79,23 @@ input {
 }
 
 .top-nav-link-list {
-  padding-bottom: 0.8rem;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  gap: 20px;
-  margin: 0 auto;
-  width: 80vw;
-  border-bottom: 1px solid orange;
-  .nav-link {
-    padding: 0.25rem;
-  }
+	padding-bottom: 0.8rem;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	align-items: center;
+	gap: 20px;
+	margin: 0 auto;
+	width: 80vw;
+	border-bottom: 1px solid orange;
+	.nav-link {
+		padding: 0.25rem;
+	}
 }
 
 .home-description-container {
 	margin: 0 auto;
-	max-width: 90vw;;
+	max-width: 90vw;
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: center;
@@ -89,6 +110,10 @@ input {
 		flex-direction: column;
 		justify-content: flex-start;
 		align-items: space-around;
+		&:hover {
+			border: 2px solid white;
+			background-color: rgba(255, 165, 0, 0.2)
+		}
 	}
 }
 
