added more styling to menus

--- a/src/App.scss
+++ b/src/App.scss
@@ -129,3 +129,19 @@ input {
 	align-items: center;
 	gap: 0.5rem;
 }
+
+.show-list {
+	margin: 0 auto;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.element-link {
+	margin: 1rem auto;
+	padding: 0.5rem;
+	width: 30vw;
+	height: 100px;
+	border: 2px solid orange;
+}
