updated button styling

--- a/src/App.scss
+++ b/src/App.scss
@@ -72,10 +72,14 @@ input {
 
 .regular-button {
 	margin: 1rem;
-	width: 100px;
-	height: 40px;
+	margin-top: 2rem;
+	width: 150px;
+	height: 60px;
 	background-color: rgb(255, 165, 0);
+	border: 2px solid black;
 	border-radius: 0.5rem;
+	font-weight: bold;
+	font-size: 1rem;
 }
 
 .top-nav-link-list {
