--- a/src/App.scss
+++ b/src/App.scss
@@ -173,3 +173,14 @@ input {
 	gap: 0.5rem;
 	text-align: center;
 }
+
+.location-list-item {
+	margin: 0.5rem auto;
+	padding: 0.25rem 1rem;
+	border: 1px solid orange;
+	border-radius: 0.5rem;
+	width: max-content;
+	&:hover {
+		background-color: rgba(255, 165, 0, 0.2)
+	}
+}
