--- a/src/App.scss
+++ b/src/App.scss
@@ -153,6 +153,7 @@ input {
 .icon {
 	color: orange;
 	margin: 1rem auto;
+	font-size: 1.5rem;
 
 }
 
@@ -180,6 +181,7 @@ input {
 	border: 1px solid orange;
 	border-radius: 0.5rem;
 	width: max-content;
+	font-size: 1.5rem;
 	&:hover {
 		background-color: rgba(255, 165, 0, 0.2)
 	}
