removed main.scss and moved code to app.scss

--- a/src/assets/_mixins.scss
+++ b/src/assets/_mixins.scss
@@ -11,3 +11,10 @@
   justify-content: center;
   align-items: center;
 }
+
+@mixin flex-row-even {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
