--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,17 @@
 @use './assets/assets-index.scss' as *;
 @use './components/components-index.scss';
 @use './pages/pages-index.scss';
+
+#root {
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+html {
+	background-color: $backgroundColor;
+	color: $primaryFontColor;
+	scroll-behavior: smooth;
+}
+
 body {
 	margin: 2rem auto;
 	padding: 0;
