--- a/src/pages/navigation/_navigation-index.scss
+++ b/src/pages/navigation/_navigation-index.scss
@@ -1,15 +1,12 @@
 @use '../../assets/assets-index.scss' as *;
 
 .top-nav-link-list {
-	padding-bottom: 0.8rem;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-evenly;
-	align-items: center;
+	@include flex-row-even;
 	gap: 20px;
 	margin: 0 auto;
+	padding-bottom: 0.8rem;
 	width: 80vw;
-	border-bottom: 1px solid orange;
+	border-bottom: 1px solid $secondaryFontColor;
 	.nav-link {
 		padding: 0.25rem;
 	}
