updated more colors to their variables and added alternate solor schemes

--- a/src/assets/_colors.scss
+++ b/src/assets/_colors.scss
@@ -1,4 +1,18 @@
 // Color Theme
-$backgroundColor: rgb(0, 0, 0);
+
+// $backgroundColor: rgb(0, 0, 0);
+// $hoverBackgroundColor: rgba(255, 152, 0, 0.1);
+// $primaryFontColor: rgb(255, 255, 255);
+// $secondaryFontColor: rgb(255, 152, 0);
+
+// Alternate Color Theme 1
+// $backgroundColor: rgb(0, 0, 0);
+// $hoverBackgroundColor: rgba(60, 255, 0, 0.1);
+// $primaryFontColor: rgb(255, 255, 255);
+// $secondaryFontColor: rgb(60, 255, 0);
+
+// Alternate Color Theme 2
+$backgroundColor: rgb(32, 20, 20);
+$hoverBackgroundColor: rgba(30, 205, 217, 0.1);
 $primaryFontColor: rgb(255, 255, 255);
-$secondaryFontColor: rgb(255, 152, 0);
+$secondaryFontColor: rgb(30, 205, 217);
