--- a/src/assets/_mixins.scss
+++ b/src/assets/_mixins.scss
@@ -12,6 +12,13 @@
   align-items: center;
 }
 
+@mixin flex-rowwrap-center {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+}
+
 @mixin flex-row-even {
   display: flex;
   flex-direction: row;
