--- a/src/pages/home/_home-page.scss
+++ b/src/pages/home/_home-page.scss
@@ -3,23 +3,20 @@
 .home-description-container {
 	margin: 0 auto;
 	max-width: 90vw;
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: center;
-	align-items: center;
+	@include flex-rowwrap-center;
 	gap: 0.5rem;
 	.item-description-container {
 		padding: 1rem;
 		width: 300px;
 		height: 300px;
-		border: 2px solid orange;
+		border: 2px solid $secondaryFontColor;
 		display: flex;
 		flex-direction: column;
 		justify-content: flex-start;
 		align-items: space-around;
 		&:hover {
-			border: 2px solid white;
-			background-color: rgba(255, 165, 0, 0.2)
+			border-color: $primaryFontColor;
+			background-color: $hoverBackgroundColor;
 		}
 	}
 }
