--- a/src/assets/_colors.scss
+++ b/src/assets/_colors.scss
@@ -1,5 +1,6 @@
-// Color Theme
+$backgroundColor: rgb(0, 0, 0);
 
+// Color Theme
 // $backgroundColor: rgb(0, 0, 0);
 // $hoverBackgroundColor: rgba(255, 152, 0, 0.1);
 // $primaryFontColor: rgb(255, 255, 255);
@@ -12,7 +13,13 @@
 // $secondaryFontColor: rgb(60, 255, 0);
 
 // Alternate Color Theme 2
-$backgroundColor: rgb(32, 20, 20);
-$hoverBackgroundColor: rgba(30, 205, 217, 0.1);
+// $backgroundColor: rgb(32, 20, 20);
+// $hoverBackgroundColor: rgba(30, 205, 217, 0.1);
+// $primaryFontColor: rgb(255, 255, 255);
+// $secondaryFontColor: rgb(30, 205, 217);
+
+// Alternate Color Theme 3
+// $backgroundColor: rgb(21, 0, 26);
+$hoverBackgroundColor: rgba(212, 1, 255, 0.1);
 $primaryFontColor: rgb(255, 255, 255);
-$secondaryFontColor: rgb(30, 205, 217);
+$secondaryFontColor: rgb(212, 1, 255);
