--- a/src/pages/inventory/locations/_locations.scss
+++ b/src/pages/inventory/locations/_locations.scss
@@ -2,13 +2,13 @@
 
 .location-list-item {
 	margin: 0.5rem auto;
-	padding: 0.25rem 1rem;
-	border: 1px solid orange;
+	padding: 1rem;
+	border: 1px solid $secondaryFontColor;
 	border-radius: 0.5rem;
-	width: max-content;
+	width: 90vw;
 	font-size: 1.5rem;
 	&:hover {
-		background-color: rgba(255, 165, 0, 0.2)
+		background-color: $hoverBackgroundColor;
 	}
 }
 
