updated all color themes with complementary highlights and colors

--- a/src/components/_components-index.scss
+++ b/src/components/_components-index.scss
@@ -1,7 +1,7 @@
 @use '../assets/assets-index.scss' as *;
 
 .icon {
-	color: $secondaryFontColor;
+	color: $navigationLinkColor;
 	margin: 1rem auto;
 	font-size: 1.5rem;
 }
