--- a/src/assets/_colors.scss
+++ b/src/assets/_colors.scss
@@ -1,23 +1,27 @@
 // Color Theme
 // $backgroundColor: rgb(0, 0, 0);
-// $hoverBackgroundColor: rgba(255, 152, 0, 0.1);
+// $navigationLinkColor: rgb(0, 255, 179);
+// $hoverBackgroundColor: rgba(0, 255, 179, 0.1);
 // $primaryFontColor: rgb(255, 255, 255);
 // $secondaryFontColor: rgb(255, 152, 0);
 
 // Alternate Color Theme 1
-// $backgroundColor: rgb(0, 0, 0);
-// $hoverBackgroundColor: rgba(60, 255, 0, 0.1);
-// $primaryFontColor: rgb(255, 255, 255);
-// $secondaryFontColor: rgb(60, 255, 0);
+$backgroundColor: rgb(0, 0, 0);
+$navigationLinkColor: rgb(255, 0, 105);
+$hoverBackgroundColor: rgba(255, 0, 105, 0.1);
+$primaryFontColor: rgb(255, 255, 255);
+$secondaryFontColor: rgb(60, 255, 0);
 
 // Alternate Color Theme 2
 // $backgroundColor: rgb(32, 20, 20);
-// $hoverBackgroundColor: rgba(30, 205, 217, 0.1);
+// $navigationLinkColor: rgb(217, 115, 187);
+// $hoverBackgroundColor: rgba(217, 115, 187, 0.1);
 // $primaryFontColor: rgb(255, 255, 255);
 // $secondaryFontColor: rgb(30, 205, 217);
 
 // Alternate Color Theme 3
-$backgroundColor: rgb(21, 0, 26);
-$hoverBackgroundColor: rgba(212, 1, 255, 0.1);
-$primaryFontColor: rgb(255, 255, 255);
-$secondaryFontColor: rgb(212, 1, 255);
+// $backgroundColor: rgb(0, 0, 0);
+// $navigationLinkColor: rgb(212, 255, 0);
+// $hoverBackgroundColor: rgba(212, 255, 0, 0.3);
+// $primaryFontColor: rgb(255, 255, 255);
+// $secondaryFontColor: rgb(212, 1, 255);
