--- a/src/assets/_colors.scss
+++ b/src/assets/_colors.scss
@@ -25,3 +25,7 @@ $secondaryFontColor: rgb(60, 255, 0);
 // $hoverBackgroundColor: rgba(212, 255, 0, 0.3);
 // $primaryFontColor: rgb(255, 255, 255);
 // $secondaryFontColor: rgb(212, 1, 255);
+
+
+$deleteButtonColor: rgb(255, 0, 0);
+$addButtonColor: rgb(0, 255, 0);
