--- a/src/pages/inventory/locations/_locations.scss
+++ b/src/pages/inventory/locations/_locations.scss
@@ -22,17 +22,13 @@
 	text-align: center;
 }
 
-.room-list-item-show {
-	margin: 0.5rem auto;
-	padding: 1rem;
-	border-left: 1px solid $secondaryFontColor;
-	width: 100px;
-	&:hover {
-		background-color: $hoverBackgroundColor;
-	}
+.room-list {
+	margin: 0 auto;
+	width: 40vw;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	gap: 0.5rem;
 
-}
-
-.room-list-item-hide {
-	display: none;
 }
