--- a/src/assets/_colors.scss
+++ b/src/assets/_colors.scss
@@ -1,4 +1,5 @@
-// Color Theme
+// Color Themes
+
 // $backgroundColor: rgb(0, 0, 0);
 // $navigationLinkColor: rgb(0, 255, 179);
 // $hoverBackgroundColor: rgba(0, 255, 179, 0.1);
@@ -27,5 +28,7 @@ $secondaryFontColor: rgb(60, 255, 0);
 // $secondaryFontColor: rgb(212, 1, 255);
 
 
+
+// Constants
 $deleteButtonColor: rgb(255, 0, 0);
 $addButtonColor: rgb(0, 255, 0);
