--- a/src/pages/inventory/_inventory-index.scss
+++ b/src/pages/inventory/_inventory-index.scss
@@ -1,1 +1,19 @@
+@use '../../assets/assets-index.scss' as *;
 @forward './locations/locations.scss';
+@forward './rooms/rooms.scss';
+@forward './items/items.scss';
+
+.element-index-name-and-new-button {
+  @include flex-row-center;
+  gap: 2rem;
+};
+
+.room-and-item-list {
+	margin: 0 auto;
+	width: 40vw;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	gap: 1rem;
+};
