--- a/src/app.scss
+++ b/src/app.scss
@@ -1,7 +1,15 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 #root {
 	margin: 0;
 	padding: 0;
 	height: 100vh;
+	width: 100vw;
+	text-align: center;
 }
 
 html {
