--- a/src/app.scss
+++ b/src/app.scss
@@ -21,7 +21,6 @@ body {
 	// background-color: rgb(176, 180, 255);
 	background-color: rgb(65, 65, 65);
 	color: white;
-
 }
 
 h1,
@@ -40,3 +39,12 @@ a {
 		color: white;
 	}
 }
+
+.signup-form {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	align-items: center;
+	justify-items: center;
+	gap: 0.5rem;
+}
+
