re-formatted for prettiness

--- a/src/app.scss
+++ b/src/app.scss
@@ -51,11 +51,11 @@ a {
 .location-list,
 .room-list,
 .item-list {
-	text-align: center;
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	align-items: center;
-	justify-items: center;
+	place-items: center;
+	place-content: center;
+
 }
 
 .location-item,
@@ -64,3 +64,4 @@ a {
 	height: 10rem;
 	width: 10rem;
 }
+
